--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/css.css">
-  <link rel="stylesheet" href="css/css/imports-stylesheet.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.css.map">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-grid.min.css.map">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-reboot.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-reboot.css.map">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap-reboot.min.css.map">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css.map">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css.map">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap/
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="//cdn.rawgit.com/MrRio/jsPDF/master/dist/jspdf.min.js"></script>
   <script type="text/javascript" src="//cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/function-ponto.js"></script>
+
 </head>
 
 <body id="nodeToRenderAsPDF">
@@ -124,10 +138,8 @@
     </div>
   </section>
 
-  <script language="javascript" type="text/javascript"></script>
 
 </body>
 
-<script type="text/javascript" src="js/function-ponto.js"></script>
 
 </html>
